--- a/.github/workflows/charts.yml
+++ b/.github/workflows/charts.yml
@@ -2,7 +2,7 @@ name: Charts
 on:
   push:
     branches:
-      - master
+      - main
 
   pull_request: 
     types: [opened, synchronize, reopened]
